--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Midterm Assignment</title>
+    <title>Espace Pour La Vie</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -12,15 +12,14 @@
   <body>
 
     <header class="bg-primary">
-      <nav class="px-5 container-lg navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="#">
-          <img src="images/daily-dish-logo.svg" width="30" height="30" alt="">
+      <nav class="px-5 container-lg navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#"> 
+            <img src="images/logo.png" width="200"alt="">
         </a>
-        <a class="navbar-brand" href="#">Image ESPACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse justify-content-end text-blue" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="#">Home</a>
             <a class="nav-item nav-link" href="#">About us</a>
@@ -35,16 +34,13 @@
 
 
     <main>
-
-      <section id="hero">
-        <div class="container-lg"> 
-          <div class="py-5 d-flex justify-content-center">
-            <div>
-              <h1>KIDS & TEACHERS</h1>
-              <p>Check our our selection of upcoming events! Read about them, see when they are taking place, and see where they are taking place. We always have something going on, so check to see what’s going on right now!</p>
-              <button type="button" class="btn btn-primary">Learn More</button>
+      <section class="hero">
+        <div class="hero-overlay"> 
+            <div class="hero-text">
+                <h1>KIDS & TEACHERS</h1>
+                <p>Check our our selection of upcoming events! Read about them, see when they are taking place, and see where they are taking place. We always have something going on, so check to see what’s going on right now!</p>
+                <button type="button" class="btn btn-primary">Learn More</button>
             </div>
-          </div>
         </div>
       </section>
 
