--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-item nav-link" href="#">Home</a>
             <a class="nav-item nav-link" href="#">About us</a>
             <a class="nav-item nav-link" href="#">Kids & Teachers</a>
-            <a class="nav-item nav-link" href="#">Explore Our Spaces</a>
+            <a class="nav-item nav-link" href="spaces.html">Explore Our Spaces</a>
             <button type="button" class="btn btn-primary">Log In</button>
             <a class="nav-item nav-link" href="#">EN/FR</a>
           </div>
@@ -34,7 +34,8 @@
 
 
     <main>
-      <section class="hero">
+      <!-- Hero -->
+      <section class="hero" style="background-image: url(images/penguins.webp);">
         <div class="hero-overlay"> 
             <div class="hero-text">
                 <h1>KIDS & TEACHERS</h1>
@@ -44,44 +45,87 @@
         </div>
       </section>
 
+<!-- Upcoming Events Container -->
+      <div class="container py-5">
+        <h2 class="text-secondary text-center mb-4">Upcoming Event</h2>
+        <ul class="nav nav-tabs justify-content-center" id="infoTabs" role="tablist">
+          <li class="nav-item">
+            <button class="nav-link active" id="tab-1" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-1" type="button" role="tab" aria-controls="pane-1" aria-selected="true">About</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" id="tab-2" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-2" type="button" role="tab" aria-controls="pane-2" aria-selected="false">Calender</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" id="tab-3" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-3" type="button" role="tab" aria-controls="pane-3" aria-selected="false">Map</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" id="tab-4" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-4" type="button" role="tab" aria-controls="pane-4" aria-selected="false">Show</button>
+          </li>
+        </ul>
 
-      <div class="row py-4">
+        <div class="tab-content mt-4" id="infoTabsContent">
+          <div class="tab-pane fade show active" id="pane-1" role="tabpanel" aria-labelledby="tab-1">
+            <div class="tab-pane-box">
+              <h3>The Garden of Light</h3>
+              <p>As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
+            </div>
+          </div>
 
-        <h1 class="text-secondary text-center py-5">Upcoming Events</h1>
+          <div class="tab-pane fade" id="pane-2" role="tabpanel" aria-labelledby="tab-2">
+            <div class="tab-pane-box">
+              <img src="images/calender.png" width="750px" height="auto" alt="">
+            </div>
+          </div>
 
-        <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
-          <img src="images/biosphere.webp" class="card-img-top" alt="...">
-          <div class="card-body text-center">
-            <h3 class="card-title text-white">Arts at The Botanical Garden</h3>
-            <p class="card-text">Come explore a variety of beautiful songs and melodies provided by songwriters on a stage nestled in the heart of the Botanical Garden. In an amalgam of musical styles and sound colours, each artist will bring their personal and intimate touch.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
+          <div class="tab-pane fade" id="pane-3" role="tabpanel" aria-labelledby="tab-3">
+            <div class="tab-pane-box">
+              <img src="images/map.jpg" width="750px" height="auto" alt="">
+            </div>
+          </div>
+
+          <div class="tab-pane fade" id="pane-4" role="tabpanel" aria-labelledby="tab-4">
+            <div class="tab-pane-box">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
+            </div>
           </div>
         </div>
-
-        <div class="card container-lg navbar navbar-expand-lg col-lg-3 text-blue" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
-          <img src="images/biosphere.webp" class="card-img-top" alt="...">
-          <div class="card-body text-center">
-            <h3 class="card-title text-white">Arts at The Botanical Garden</h3>
-            <p class="card-text">Come explore a variety of beautiful songs and melodies provided by songwriters on a stage nestled in the heart of the Botanical Garden. In an amalgam of musical styles and sound colours, each artist will bring their personal and intimate touch.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-
-        <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
-          <img src="images/biosphere.webp" class="card-img-top" alt="...">
-          <div class="card-body text-center">
-            <h3 class="card-title text-white">Arts at The Botanical Garden</h3>
-            <p class="card-text">Come explore a variety of beautiful songs and melodies provided by songwriters on a stage nestled in the heart of the Botanical Garden. In an amalgam of musical styles and sound colours, each artist will bring their personal and intimate touch.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-
       </div>
 
-      
+      <!-- Seasonal Events Container -->
+      <div class="container">
+        <div class="row py-4">
 
+          <h1 class="text-secondary text-center py-5">Seasonal Events</h1>
 
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+            <img src="images/flower-festival.webp" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h3 class="card-title text-white">Arts at The Botanical Garden</h3>
+              <p class="card-text">Come explore a variety of beautiful songs and melodies provided by songwriters on a stage nestled in the heart of the Botanical Garden. In an amalgam of musical styles and sound colours, each artist will bring their personal and intimate touch.</p>
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
 
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 text-blue" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+            <img src="images/lights-festival.webp" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h3 class="card-title text-white">The Garden of Light</h3>
+              <p class="card-text">As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+            <img src="images/halloween.webp" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h3 class="card-title text-white">Halloween at The Botanical Garden</h3>
+              <p class="card-text">At the Botanical Garden, we like to celebrate Halloween! October has been synonymous with pumpkins, squash, shows and family activities of all kinds. Again this year, is back with new products for the whole family!</p>
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </main>
 
 <div>
@@ -96,7 +140,7 @@
           <img src="images/logo.png" width="250" height="auto" alt="">
         </div>
 
-        <div class="row py-4">
+        <div class="row py-4 text-info">
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
             <p>
               Enjoy an immersive experience at the 5 Espace pour la vie museums: the Biodôme, Biosphère, Insectarium, Jardin botanique and the Planétarium await you!
@@ -106,25 +150,28 @@
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
             <h3 class="mb-4">Contact us</h3>
             <p>
-              <a class="text-blue">(514) 868-3000</a>
+              <a class="nav-item nav-link">(514) 868-3000</a>
             </p>
             <p>
-              <a class="text-blue">espacemont@gmail.com</a>
+              <a class="nav-item nav-link">espacemont@gmail.com</a>
             </p>
           </div>
 
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h3 class="mb-4 text-blue">Social Media</h3>
+            <h3 class="mb-4">Social Media</h3>
             <p>
-              <a class=""><img src="images/facebook.png" alt="" width="25" height="auto"> Facebook</a>
+              <a class="nav-item nav-link"><img src="images/facebook.png" alt="" width="25" height="auto"> Facebook</a>
             </p>
             <p>
-              <a class="text-blue"><img src="images/instagram.svg" alt="" width="25" height="auto"> Instagram</a>
+              <a class="nav-item nav-link"><img src="images/instagram.svg" alt="" width="25" height="auto"> Instagram</a>
             </p>
           </div>
   </footer>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
 
 
