--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="bg-primary">
       <nav class="px-5 container-lg navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#"> 
+        <a class="navbar-brand" href="index.html"> 
             <img src="images/logo.png" width="200"alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
 
 <!-- Upcoming Events Container -->
       <div class="container py-5">
-        <h2 class="text-secondary text-center mb-4">Upcoming Event</h2>
+        <h1 class="text-secondary text-center mb-4">Upcoming Event</h1>
         <ul class="nav nav-tabs justify-content-center" id="infoTabs" role="tablist">
           <li class="nav-item">
             <button class="nav-link active" id="tab-1" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-1" type="button" role="tab" aria-controls="pane-1" aria-selected="true">About</button>
@@ -63,29 +63,36 @@
           </li>
         </ul>
 
-        <div class="tab-content mt-4" id="infoTabsContent">
+        <div class="tab-content mt-4">
           <div class="tab-pane fade show active" id="pane-1" role="tabpanel" aria-labelledby="tab-1">
-            <div class="tab-pane-box">
-              <h3>The Garden of Light</h3>
-              <p>As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
-            </div>
+              <div class="tab-pane-box">
+                <div class="row align-items-center">
+                  <div class="col-md-4">
+                    <img src="images/lights-festival.webp" class="img-fluid" alt="#">
+                  </div>
+                  <div class="col-md-8">
+                    <h3>The Garden of Light</h3>
+                    <p>As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
+                  </div>
+                </div>
+              </div>
           </div>
 
           <div class="tab-pane fade" id="pane-2" role="tabpanel" aria-labelledby="tab-2">
-            <div class="tab-pane-box">
+            <div class="tab-pane-box d-flex justify-content-center">
               <img src="images/calender.png" width="750px" height="auto" alt="">
             </div>
           </div>
 
           <div class="tab-pane fade" id="pane-3" role="tabpanel" aria-labelledby="tab-3">
-            <div class="tab-pane-box">
+            <div class="tab-pane-box d-flex justify-content-center">
               <img src="images/map.jpg" width="750px" height="auto" alt="">
             </div>
           </div>
 
           <div class="tab-pane fade" id="pane-4" role="tabpanel" aria-labelledby="tab-4">
-            <div class="tab-pane-box">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
+            <div class="tab-pane-box d-flex justify-content-center">
+              <img src="images/show.jpg" width="750px" height="auto" alt="Show">
             </div>
           </div>
         </div>
