--- a/spaces.html
+++ b/spaces.html
@@ -21,9 +21,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end text-blue" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="index.html">Home</a>
+            <a class="nav-item nav-link" href="">Home</a>
             <a class="nav-item nav-link" href="#">About us</a>
-            <a class="nav-item nav-link" href="#">Kids & Teachers</a>
+            <a class="nav-item nav-link" href="index.html">Kids & Teachers</a>
             <a class="nav-item nav-link" href="#">Explore Our Spaces</a>
             <button type="button" class="btn btn-primary">Log In</button>
             <a class="nav-item nav-link" href="#">EN/FR</a>
@@ -66,7 +66,7 @@
                     <div class="card-body text-center">
                     <h3 class="card-title text-white">Biosphere</h3>
                     <p class="card-text">Nestled in Montreal’s Parc Jean-Drapeau, on the shores of the St. Lawrence River, the Biosphère is an inclusive institution showcasing a variety of approaches that offer a unique space for open innovation and engagement on pressing socio-environmental issues.</p>
-                    <a href="#" class="btn btn-primary">Learn More</a>
+                    <a href="biosphere.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
                 </div>
