--- a/biosphere.html
+++ b/biosphere.html
@@ -21,9 +21,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end text-blue" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="">Home</a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="">About us</a>
-            <a class="nav-item nav-link" href="index.html">Kids & Teachers</a>
+            <a class="nav-item nav-link" href="kids.html">Kids & Teachers</a>
             <a class="nav-item nav-link" href="spaces.html">Explore Our Spaces</a>
             <button type="button" class="btn btn-primary">Log In</button>
             <a class="nav-item nav-link" href="#">EN/FR</a>
