--- a/spaces.html
+++ b/spaces.html
@@ -21,10 +21,10 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end text-blue" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="">Home</a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="#">About us</a>
-            <a class="nav-item nav-link" href="index.html">Kids & Teachers</a>
-            <a class="nav-item nav-link" href="#">Explore Our Spaces</a>
+            <a class="nav-item nav-link" href="kids.html">Kids & Teachers</a>
+            <a class="nav-item nav-link" href="spaces.html">Explore Our Spaces</a>
             <button type="button" class="btn btn-primary">Log In</button>
             <a class="nav-item nav-link" href="#">EN/FR</a>
           </div>
@@ -34,7 +34,7 @@
 
 
     <main> 
-      <section class="hero" style="background-image: url(images/biosphere.webp);">
+      <section class="hero" style="background-image: url(images/flower-festival.webp);">
         <div class="hero-overlay"> 
             <div class="hero-text">
                 <h1>EXPLORE OUR SPACES</h1>
