--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end text-blue" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Home</a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="#">About us</a>
-            <a class="nav-item nav-link" href="#">Kids & Teachers</a>
+            <a class="nav-item nav-link" href="kids.html">Kids & Teachers</a>
             <a class="nav-item nav-link" href="spaces.html">Explore Our Spaces</a>
             <button type="button" class="btn btn-primary">Log In</button>
             <a class="nav-item nav-link" href="#">EN/FR</a>
@@ -35,99 +35,64 @@
 
     <main>
       <!-- Hero -->
-      <section class="hero" style="background-image: url(images/penguins.webp);">
+      <section class="hero" style="background-image: url(images/image-planetarium.webp);">
         <div class="hero-overlay"> 
             <div class="hero-text">
-                <h1>KIDS & TEACHERS</h1>
-                <p>Check our our selection of upcoming events! Read about them, see when they are taking place, and see where they are taking place. We always have something going on, so check to see what’s going on right now!</p>
+                <h3>Welcome to</h3>
+                <h1>Espace Pour La Vie</h1>
+                <p>Get ready to embark on a perspective changing journey.</p>
                 <button type="button" class="btn btn-primary">Learn More</button>
             </div>
         </div>
       </section>
 
-<!-- Upcoming Events Container -->
-      <div class="container py-5">
-        <h1 class="text-secondary text-center mb-4">Upcoming Event</h1>
-        <ul class="nav nav-tabs justify-content-center" id="infoTabs" role="tablist">
-          <li class="nav-item">
-            <button class="nav-link active" id="tab-1" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-1" type="button" role="tab" aria-controls="pane-1" aria-selected="true">About</button>
-          </li>
-          <li class="nav-item">
-            <button class="nav-link" id="tab-2" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-2" type="button" role="tab" aria-controls="pane-2" aria-selected="false">Calender</button>
-          </li>
-          <li class="nav-item">
-            <button class="nav-link" id="tab-3" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-3" type="button" role="tab" aria-controls="pane-3" aria-selected="false">Map</button>
-          </li>
-          <li class="nav-item">
-            <button class="nav-link" id="tab-4" data-label="null" data-bs-toggle="tab" data-bs-target="#pane-4" type="button" role="tab" aria-controls="pane-4" aria-selected="false">Show</button>
-          </li>
-        </ul>
-
-        <div class="tab-content mt-4">
-          <div class="tab-pane fade show active" id="pane-1" role="tabpanel" aria-labelledby="tab-1">
-              <div class="tab-pane-box">
-                <div class="row align-items-center">
-                  <div class="col-md-4">
-                    <img src="images/lights-festival.webp" class="img-fluid" alt="#">
-                  </div>
-                  <div class="col-md-8">
-                    <h3>The Garden of Light</h3>
-                    <p>As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
-                  </div>
-                </div>
+      <!-- Greetings -->
+      <div class="container-fluid py-5" style="background-color: #E7E4FF;">
+        <div class="container">
+          <div class="row align-items-center">
+              <div class="col-md-4">
+                  <img src="images/lights-festival.webp" class="img-fluid" alt="#">
               </div>
-          </div>
-
-          <div class="tab-pane fade" id="pane-2" role="tabpanel" aria-labelledby="tab-2">
-            <div class="tab-pane-box d-flex justify-content-center">
-              <img src="images/calender.png" width="750px" height="auto" alt="">
-            </div>
-          </div>
-
-          <div class="tab-pane fade" id="pane-3" role="tabpanel" aria-labelledby="tab-3">
-            <div class="tab-pane-box d-flex justify-content-center">
-              <img src="images/map.jpg" width="750px" height="auto" alt="">
-            </div>
-          </div>
-
-          <div class="tab-pane fade" id="pane-4" role="tabpanel" aria-labelledby="tab-4">
-            <div class="tab-pane-box d-flex justify-content-center">
-              <img src="images/show.jpg" width="750px" height="auto" alt="Show">
-            </div>
+              <div class="col-md-8">
+                  <h3>Greetings!</h3>
+                  <p>As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
+              </div>
           </div>
         </div>
       </div>
 
-      <!-- Seasonal Events Container -->
+
+
+      <!-- Gateways  -->
       <div class="container">
         <div class="row py-4">
 
-          <h1 class="text-secondary text-center py-5">Seasonal Events</h1>
+          <h1 class="text-secondary text-center py-5">Explore What we Have to Offer!</h1>
 
           <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
-            <img src="images/flower-festival.webp" class="card-img-top" alt="...">
+            <img src="images/example3.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-              <h3 class="card-title text-white">Arts at The Botanical Garden</h3>
-              <p class="card-text">Come explore a variety of beautiful songs and melodies provided by songwriters on a stage nestled in the heart of the Botanical Garden. In an amalgam of musical styles and sound colours, each artist will bring their personal and intimate touch.</p>
+              <h3 class="card-title text-white">About Us</h3>
+              <p class="card-text">Learn about Espace Pour la Vie and all we have to offer!</p>
               <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
 
           <div class="card container-lg navbar navbar-expand-lg col-lg-3 text-blue" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
-            <img src="images/lights-festival.webp" class="card-img-top" alt="...">
+            <img src="images/example2.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-              <h3 class="card-title text-white">The Garden of Light</h3>
-              <p class="card-text">As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <h3 class="card-title text-white">Kids & Teachers</h3>
+              <p class="card-text">Classes and group activities for large groups of young individuals in a fun, educational setting.</p>
+              <a href="index.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
 
           <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
-            <img src="images/halloween.webp" class="card-img-top" alt="...">
+            <img src="images/nature-sculpture.webp" class="card-img-top" alt="...">
             <div class="card-body text-center">
-              <h3 class="card-title text-white">Halloween at The Botanical Garden</h3>
-              <p class="card-text">At the Botanical Garden, we like to celebrate Halloween! October has been synonymous with pumpkins, squash, shows and family activities of all kinds. Again this year, is back with new products for the whole family!</p>
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <h3 class="card-title text-white">Explore our Spaces</h3>
+              <p class="card-text">Take a look at our facilities and see what we have for you to see.</p>
+              <a href="spaces.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
 
@@ -175,9 +140,6 @@
           </div>
   </footer>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
 
