--- a/biosphere.html
+++ b/biosphere.html
@@ -58,23 +58,27 @@
         </div>
       </div>
 
-      <!-- About Container -->
+      <!-- Information Container -->
       <div class="container-fluid px-0">
         <div class="container py-5">
           <h2 class="text-secondary">WHERE AND WHEN</h2>
-          <div class="d-flex align-items-center">
-            <img src="images/map.jpg" width="600px" height="auto" alt="">
-            <img src="images/calender.png" width="600px" height="auto" alt="">
+          <div class="row d-flex align-items-center">
+            <div class="col">
+              <img src="images/map.jpg" width="600px" height="auto" alt="">
+            </div>
+            <div class="col">
+              <img src="images/calender.png" width="600px" height="auto" alt="">
+            </div>
           </div>
         </div>
       </div>
 
 
-      <!-- Seasonal Events Container -->
+      <!-- Events Container -->
       <div class="container">
         <div class="row py-4">
 
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/example1.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">Interactive Simulation Class</h3>
@@ -83,7 +87,7 @@
             </div>
           </div>
 
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3 text-blue" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/example2.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">Biotech Guest Speaker</h3>
@@ -92,7 +96,7 @@
             </div>
           </div>
 
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/example3.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">Cool Bug Exhibit</h3>
@@ -105,6 +109,7 @@
       </div>
     </main>
 
+<!-- Footer -->
 <div>
   <footer
           class="text-center text-lg-start text-blue"
