--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </div>
               <div class="col-md-8">
                   <h3>Greetings!</h3>
-                  <p>As part of its signature fall event, we invite you to walk the paths of the Botanical Garden’s three illuminated cultural gardens. Don’t miss the Chinese Garden’s latest feature showcasing one of China’s greatest legends, the butterfly lovers.</p>
+                  <p>Feel free to explore the website as you please! For some ideas on things to check out, scroll down and view the options! We have so much to offer you, so have fun looking around!</p>
               </div>
           </div>
         </div>
@@ -65,11 +65,11 @@
 
       <!-- Gateways  -->
       <div class="container">
-        <div class="row py-4">
+        <div class="row py-4 g-3">
 
           <h1 class="text-secondary text-center py-5">Explore What we Have to Offer!</h1>
 
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/example3.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">About Us</h3>
@@ -77,8 +77,8 @@
               <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
-
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3 text-blue" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+ 
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/example2.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">Kids & Teachers</h3>
@@ -86,8 +86,8 @@
               <a href="index.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
-
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+ 
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/nature-sculpture.webp" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">Explore our Spaces</h3>
