--- a/kids.html
+++ b/kids.html
@@ -104,7 +104,7 @@
 
           <h1 class="text-secondary text-center py-5">Seasonal Events</h1>
 
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/flower-festival.webp" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">Arts at The Botanical Garden</h3>
@@ -113,7 +113,7 @@
             </div>
           </div>
 
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3 text-blue" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/lights-festival.webp" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">The Garden of Light</h3>
@@ -122,7 +122,7 @@
             </div>
           </div>
 
-          <div class="card container-lg navbar navbar-expand-lg col-lg-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
+          <div class="card container-lg navbar navbar-expand-lg col-lg-3 mb-3" style="width: 20rem; padding: 20px; background-color:#ABA2EE;">
             <img src="images/halloween.webp" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h3 class="card-title text-white">Halloween at The Botanical Garden</h3>
