--- a/spaces.html
+++ b/spaces.html
@@ -34,6 +34,7 @@
 
 
     <main> 
+      <!-- Hero -->
       <section class="hero" style="background-image: url(images/flower-festival.webp);">
         <div class="hero-overlay"> 
             <div class="hero-text">
@@ -45,7 +46,7 @@
       </section>
 
 
-      
+      <!-- Locations Container -->
       <div class="container">
         <div class="row row-cols-1 row-cols-md-2 g-4 py-4">
 
