--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="card-body text-center">
               <h3 class="card-title text-white">Kids & Teachers</h3>
               <p class="card-text">Classes and group activities for large groups of young individuals in a fun, educational setting.</p>
-              <a href="index.html" class="btn btn-primary">Learn More</a>
+              <a href="kids.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
  
@@ -100,6 +100,7 @@
       </div>
     </main>
 
+<!-- Footer -->
 <div>
   <footer
           class="text-center text-lg-start text-blue"
